--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "hello-react-native",
+  "name": "news-management",
   "main": "expo-router/entry",
   "version": "1.0.0",
   "scripts": {
@@ -45,7 +45,7 @@
     "react-native-screens": "~4.4.0",
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.13",
-    "react-native-webview": "13.12.5",
+    "react-native-webview": "^13.12.5",
     "yup": "^1.6.1"
   },
   "devDependencies": {
